fixed OurTeam section, Divider and spacing classes

--- a/src/components/about/TeamMember/TeamMember.module.css
+++ b/src/components/about/TeamMember/TeamMember.module.css
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 16px;
 }
 .nameContainer {
